chore: update readme

--- a/.env.docker-example
+++ b/.env.docker-example
@@ -5,14 +5,15 @@ MYSQL_DATABASE=app
 MYSQL_USER=user_app
 MYSQL_PASSWORD=password_app
 MYSQL_EXTERNAL_PORT=3316
-MYSQL_PORT=3316
-MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_HOST=mysqldb
 
-RABBITMQ_DEFAULT_HOST=localhost
+# RabbitMQ
 RABBITMQ_DEFAULT_USER=rabbitmq_user
 RABBITMQ_DEFAULT_PASS=rabbitmq_password
 RABBITMQ_DEFAULT_PORT=5672
 RABBITMQ_DEFAULT_WEB_PLUGIN_PORT=15672
+RABBITMQ_DEFAULT_HOST=rabbitmq
 RABBITMQ_DEFAULT_VHOST=/
 
 # JWT
